# speech2md

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
speech2md/: _gpu.py  align.py  diarize.py  transcribe.py
tests/: test_diarize.py  test_gpu_hint.py  test_transcribe.py
