[project]
name = "speech2md"
version = "0.1.0"
description = "Transcribe long audio to clean prose markdown with Qwen3-ASR + vLLM."
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
# GPU / transcription stack — needed by `speech2md` and `align-transcription`
# at runtime. Kept optional so unit tests can run without a multi-GB torch
# install.
gpu = [
    "qwen-asr[vllm]",
    "torch",
]
dev = ["pytest"]

[project.scripts]
speech2md = "speech2md.transcribe:main"
align-transcription = "speech2md.align:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["speech2md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
